Added route to get all resturants associated with the user

--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,7 +1,11 @@
 {
-  "/auth/*": {
+  "/auth": {
     "target": "http://localhost:9001/v1/api",
     "secure": false,
     "logLevel": "debug"
+  },
+  "/restaurants": {
+    "target": "http://localhost:9001/v1/api",
+    "secure": false
   }
 }
